<resources>
    <string name="app_name">BMI counter</string>

    <!-- strings for views -->
    <string name="mass_textView">Mass:</string>
    <string name="height_textView">Height:</string>
    <string name="count_bmi_button">Count BMI</string>
    <string name="result_bmi_textView">BMI result:</string>

    <string name="mass_stones_textView">st:</string>
    <string name="mass_pounds_textView">lb:</string>
    <string name="height_feet_textView">ft:</string>
    <string name="height_inches_textView">in:</string>

    <!-- strings for EditText's hints -->
    <string name="hint_unit_kg">kilograms [kg]</string>
    <string name="hint_unit_m">meters [m]</string>

    <!-- bmi results descriptions -->
    <string name="bmi_result_underweight">Underweight. Eat more!</string>
    <string name="bmi_result_healthy">Healthy! :D</string>
    <string name="bmi_result_overweight">Overweight. Eat less!</string>
    <string name="bmi_result_severely_obese">Obese.</string>
    <string name="bmi_result_morbidly_obese">Clinically obese.</string>

    <!-- string for menu values -->
    <string name="menu_units_kg_m">Metric</string>
    <string name="menu_units_lb_in">Imperial</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_about_author">About author</string>

    <!-- toast exceptions info -->
    <string name="invalid_height_toast">Height out of range!</string>
    <string name="invalid_mass_toast">Mass out of range!</string>
    <string name="exception_failed_to_save_screenshot">Failed to save screenshot.</string>
    <string name="exception_no_app_to_handle_share">No apps found.</string>

    <!-- about author layout -->
    <string name="author_invitational">Hi! I\'m Karol.</string>

    <!-- image saving/ sharing handling strings -->
    <string name="dir_screenshots_folder">BMI_shots</string>
    <string name="screenshot_file_default_name">BMI_</string>
    <string name="successful_save_screenshot">Saved with success!</string>
    <string name="share_apps_chooser_title">Share screenshot</string>
    <string name="saved_toast">Saved under:</string>
    <string name="share_BMI_result_text_title">My BMI result:</string>
    <string name="share_using">Share with:</string>
    <string name="no_result_available">No result available.</string>
    <string name="share_alert_dialog_title">Share</string>
    <string name="share_alert_dialog_image">Share</string>
    <string name="share_alert_dialog_just_result">Share</string>

    <!-- saving result to shared preferences -->
    <string name="saved_BMI_results">Results saved.</string>
    <string name="save_alert_dialog_title">Save</string>
    <string name="save_alert_dialog_image">Save screenshot</string>
    <string name="save_alert_dialog_last_result">Last result</string>

    <string name="alert_dialog_cancel">Cancel</string>

</resources>
