<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/mass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/mass_textView"/>

    <EditText
        android:id="@+id/mass_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/mass_label"
        android:hint="@string/hint_unit_kg"
        android:inputType="numberDecimal"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mass_label"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/height_textView"/>

    <EditText
        android:id="@+id/height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/mass_label"
        android:layout_marginBottom="32dp"
        android:layout_toRightOf="@id/height_label"
        android:hint="@string/hint_unit_m"
        android:inputType="numberDecimal"
        android:padding="16dp"/>
</RelativeLayout>