...
        android:padding="12dp"
        android:text="@string/count_bmi_button"
        android:textAllCaps="true"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/BMI_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_bmi_button"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="32dp"
        android:textSize="64sp"
        android:visibility="gone"
        tools:text="34.5"/>

    <TextView
        android:id="@+id/BMI_result_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BMI_result"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="12dp"
...
